# globsim

./: .gitattributes  .gitignore  CITATION.cff  CLASS_interaction.py  Dockerfile  ERA-Interim.py  ERA_Interim.py  ERA_Interim_Download.py  ERAdownload_XQ.py  Ekati.py  JRA.py  JRA_Complete.py  JRA_Download_Convert.py  MERRA.py  MERRA_1.py  MERRA_pydap.py  Ottawa.py  Ottawa_Interpolation.py  Ottawa_Plot.py  PET0.ESMF_LogFile  README.md  __init__.py  data_check.py  download.py  era5.py  era5_example.py  era5_test.py  eraDownload.py  era_interim.py  exporttools.py  generic.py  globsim.py  globsim.py36.yml  globsim_download.py  globsim_interpolate.py  globsim_main.py  globsim_scale.py  jra_example.py  merra-2.py  merra-2_model_levels.py  (+16 more)
DReaMIT_demo/: DReaMIT_demo.ipynb  environment.yml  test.ipynb
Drafts of Testing Scripts/: Ottawa_Interpolation.py  interpolation.py
GlobSim/: __init__.py  era5.py  globsim_download.py  globsim_main.py  merra_2.py  nc_elements.py  test.py
JRA/: generic.py  jraNCAR.py
JRA-55/: merra.py
credentials/: .cdsapirc.txt  .erarc.txt  .jra55rc.txt  .jrarc.txt  .merrarc.txt
docker/: Dockerfile
ecmwfapi/: __init__.py
era_interim/: __init__.py  era_interim.py
globsim/: GenericDownload.py  JRA.py  LazyLoader.py  MerraDownloadRewrite.py  __init__.py  __main__.py  _version.py  boundingbox.py  chunking.py  common_utils.py  constants.py  data_check.py  decorators.py  dreamit.py  era5.py  era5_example.py  era_interim.py  exporttools.py  gap_checker.py  generic.py  globsim.py  globsim_cli.py  globsim_convert.py  globsim_download.py  interp.py  (+10 more)
(+176 files in other folders)
